commit 6 fix bag _blanck

--- a/duty-page.html
+++ b/duty-page.html
@@ -105,7 +105,7 @@
 			<section class="wwii">
 				<div class="wwii__container _container">
 					<div class="wwii__techical">
-						<div class="wwii__title title">Call of Duty: WWII</div>
+						<h2 class="wwii__title title">Call of Duty: WWII</h2>
 						<div class="wwii__block	 buttons-block buttons-block_page-duty">
 							<div class="buttons-block__column">
 								<div class="buttons-block__btn btn-all btn-all_noMain"><span></span> <span>Order Now</span>
@@ -130,9 +130,9 @@
 			<section class="life">
 				<div class="life__container _container">
 					<div class="life__row">
-						<div class="life__column">
+						<h2 class="life__column">
 							<a href="#" class="life__title title">Life Advice Looking Through A Window</a>
-						</div>
+						</h2>
 						<div class="life__column">
 							<div class="life__image _ibg">
 								<img src="img/duty-page/duty_img-3.jpg" alt="">
@@ -150,16 +150,16 @@
 								<img src="img/duty-page/duty_img-4.jpg" alt="image">
 							</div>
 						</div>
-						<div class="answers__column">
+						<h2 class="answers__column">
 							<a href="#" class="answers__title title">The Best Answers</a>
-						</div>
+						</h2>
 					</div>
 				</div>
 			</section>
 
 			<section class="specifications">
 				<div class="specifications__container _container">
-					<div class="specifications__title title">Technical Specifications</div>
+					<h2 class="specifications__title title">Technical Specifications</h2>
 					<div class="specifications__row">
 						<div class="specifications__column">
 							<a href="#" class="specifications__link">
