--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
 									<div class="item-games__image _ibg">
 										<img src="img/games/games_img_1.jpg" alt="image">
 									</div>
-									<a target="_blanck" href="duty-page.html" class="item-games__title">Call of Duty: WWII</a>
+									<a target="_blank" href="duty-page.html" class="item-games__title">Call of Duty: WWII</a>
 									<div class="item-games__subtitle">The C.O.D.E. Bravery Pack
 										is now available in WWII</div>
-									<a target="_blanck" href="duty-page.html" class="item-games__button  btn">See Details</a>
+									<a target="_blank" href="duty-page.html" class="item-games__button  btn">See Details</a>
 								</div>
 							</div>
 							<div class="games__slide slide-games swiper-slide">
@@ -214,9 +214,9 @@
 									<div class="item-games__image _ibg">
 										<img src="img/games/games_img_2.jpg" alt="image">
 									</div>
-									<a target="_blanck" href="duty-page.html" class="item-games__title">Destiny 2</a>
+									<a target="_blank" href="duty-page.html" class="item-games__title">Destiny 2</a>
 									<div class="item-games__subtitle"></div>
-									<a target="_blanck" href="duty-page.html" class="item-games__button  btn">See Details</a>
+									<a target="_blank" href="duty-page.html" class="item-games__button  btn">See Details</a>
 								</div>
 							</div>
 							<div class="games__slide slide-games swiper-slide">
@@ -224,9 +224,9 @@
 									<div class="item-games__image _ibg">
 										<img src="img/games/games_img_3.jpg" alt="image">
 									</div>
-									<a target="_blanck" href="duty-page.html" class="item-games__title">STEEP</a>
+									<a target="_blank" href="duty-page.html" class="item-games__title">STEEP</a>
 									<div class="item-games__subtitle"></div>
-									<a target="_blanck" href="duty-page.html" class="item-games__button  btn">See Details</a>
+									<a target="_blank" href="duty-page.html" class="item-games__button  btn">See Details</a>
 								</div>
 							</div>
 							<div class="games__slide slide-games swiper-slide">
@@ -234,9 +234,9 @@
 									<div class="item-games__image _ibg">
 										<img src="img/games/games_img_4.jpg" alt="image">
 									</div>
-									<a target="_blanck" href="duty-page.html" class="item-games__title">Forza Motorsport 7</a>
+									<a target="_blank" href="duty-page.html" class="item-games__title">Forza Motorsport 7</a>
 									<div class="item-games__subtitle"></div>
-									<a target="_blanck" href="duty-page.html" class="item-games__button btn">See Details</a>
+									<a target="_blank" href="duty-page.html" class="item-games__button btn">See Details</a>
 								</div>
 							</div>
 						</div>
